--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-loading-skeleton": "^3.5.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "react-spinners": "^0.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
