--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.20.2",
     "@clerk/react-router": "^0.1.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^6.3.1",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "firebase": "^11.1.0",
